--- a/myfirst_website.html
+++ b/myfirst_website.html
@@ -8,7 +8,7 @@
 <h1><a href="https://namu.wiki/w/Don't%20Starve%20Together" target="_blank"
   title="굶지마 나무위키">굶지마</a></h1>
 <ol>
-    <li><a href="초록보석.html">초록보석</a></li>
+    <li><a href="index.html">초록보석</a></li>
     <li><a href="툴레사이트.html">툴레사이트</a></li>
     <li><a href="myfirst_website.html">굶지마 툴레사이트 계산기</a></li>
 
